Added auth logic to check and validate the Bearer token
