# docs/swagger.yaml
@@ -43,6 +43,72 @@ definitions:
       username:
         type: string
     type: object
+  main.createPostPayload:
+    properties:
+      content:
+        maxLength: 255
+        type: string
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        description: for validation purpose details below in methods
+        maxLength: 255
+        type: string
+    required:
+    - content
+    - title
+    type: object
+  store.Comment:
+    properties:
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      post_id:
+        type: integer
+      user:
+        allOf:
+        - $ref: '#/definitions/store.User'
+        description: User is not part of comment table, its for join and data we are
+          using, demo purpose
+      user_id:
+        type: integer
+    type: object
+  store.Post:
+    properties:
+      comments:
+        description: comment not part of post table, just for showing comments on
+          posts
+        items:
+          $ref: '#/definitions/store.Comment'
+        type: array
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/store.User'
+      user_id:
+        type: integer
+      version:
+        description: "version will check the version passed in request, if matches,
+          then\n\t\tupdate will happen, and it will increase the version in each update\""
+        type: integer
+    type: object
   store.User:
     properties:
       created_at:
@@ -148,6 +214,68 @@ paths:
       summary: Health Check
       tags:
       - Health
+  /posts:
+    post:
+      consumes:
+      - application/json
+      description: Creates a post
+      parameters:
+      - description: Post payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.createPostPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/store.Post'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Creates a post
+      tags:
+      - posts
+  /posts/{postId}:
+    get:
+      consumes:
+      - application/json
+      description: Fetches a post by ID
+      parameters:
+      - description: Post ID
+        in: path
+        name: postId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Post'
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Fetches a post
+      tags:
+      - posts
   /users/{userId}:
     get:
       consumes:
